<resources>
    <string name="app_name">Editor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_an_image_to_edit">Select an image\nto edit!</string>
    <string name="select">Select</string>
    <string name="image_from_gallery">Image from gallery</string>
    <string name="add_text">Add text</string>
    <string name="greyscale">Greyscale</string>
    <string name="save">Save</string>
    <string name="edit">Edit!</string>
</resources>