<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ImageSelectorFragment"
    android:background="@color/black">

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:paddingTop="16dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:textColor="@color/black"
        android:padding="16dp"
        android:textSize="16sp"
        android:layout_margin="16dp"
        android:text="@string/save"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/selectImageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#ACACAC"
        android:textSize="32sp"
        android:padding="16dp"
        android:text="@string/select_an_image_to_edit"
        android:gravity="center"
        app:layout_constraintVertical_bias="0.3"/>

<!--    <ImageView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:adjustViewBounds="true"-->
<!--        android:id="@+id/viewImage"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_margin="16dp"-->
<!--        android:padding="8dp"-->
<!--        android:maxHeight="600dp"-->
<!--        app:layout_constraintVertical_bias="0.2"-->
<!--        android:visibility="gone"-->
<!--        android:contentDescription="@string/image_from_gallery"/>-->

<!--    <com.example.editor.fragments.DrawCanvas-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/imageCanvas"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_margin="16dp"-->
<!--        android:maxHeight="600dp"-->
<!--        android:visibility="gone"/>-->

    <com.example.editor.fragments.DrawableImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/chosenImageView"
        android:layout_margin="16dp"
        android:maxHeight="500dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/selectImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectImageText"
        app:layout_constraintVertical_bias="0.4"
        android:padding="16dp"
        android:textSize="16sp"
        android:text="@string/select"/>
<!--    <Button-->
<!--        android:id="@+id/editImageButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:backgroundTint="@color/teal_200"-->
<!--        android:textColor="@color/black"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/viewImage"-->
<!--        app:layout_constraintVertical_bias="0.4"-->
<!--        android:padding="16dp"-->
<!--        android:textSize="16sp"-->
<!--        android:text="@string/edit"-->
<!--        android:visibility="gone"/>-->
    <Button
        android:id="@+id/addTextButton"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_secondary"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/greyScaleButton"
        app:layout_constraintVertical_bias="0.8"
        android:padding="16dp"
        android:textSize="16sp"
        android:layout_margin="16dp"
        android:text="@string/add_text"
        android:visibility="gone"/>
    <Button
        android:id="@+id/greyScaleButton"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_secondary"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/addTextButton"
        app:layout_constraintStart_toEndOf="@id/addTextButton"
        app:layout_constraintTop_toTopOf="@id/addTextButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:textSize="16sp"
        android:layout_marginEnd="16dp"
        android:text="@string/greyscale"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>